first question functioning

--- a/index.html
+++ b/index.html
@@ -27,14 +27,29 @@
     </header>
     <!-- END HEADER -->
     <main>
+        <div class="container">
         <div class="row">
         <div class="col text-center mt-5">
         <div class="quiz-section">
-            <h2>Ready To Start Your Quiz?</h2>
-                <button class="option-1"></button>
-                <button class="option-2"></button>
-                <button class="option-3"></button>
-                <button class="start-button">Start Quiz!</button>
+            <h4 class="quiz-question">Ready To Start Your Quiz?</h4>
+            <div class="col quiz-answers">
+                <div class="option-1">
+                    <!-- <button class="btn row m-1" id="answer-1"></button> -->
+                </div>
+                <div class="option-2">
+                    <!-- <button class="btn row m-1" id="answer-2"></button> -->
+                </div>
+                <div class="option-3">
+                    <!-- <button class="btn row m-1" id="answer-3"></button> -->
+                </div>
+            </div>
+            <div class="start-section">
+                <button type="button" class="start-button btn btn-success row m-1 mt-3">Start Quiz!</button>
+            </div>
+            <div class="final-score">
+
+            </div>
+        </div>
         </div>
         </div>
         </div>
