--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- BEGIN HEADER -->
     <header>
     <div class="container">
-        <div class="row">
+        <div class="row mt-5">
         <div class="high-scores col text-left">
             <h4>View High Scores!</h4>
         </div>
@@ -27,7 +27,7 @@
     </header>
     <!-- END HEADER -->
     <main>
-        <div class="container">
+        <div class="container mt-3">
         <div class="row">
         <div class="col text-center mt-5">
         <div class="quiz-section">
